# project-with-gtest-template

./: CMakeLists.txt  README.md  run_tests.cpp
cmake/: googletest-download.cmake
src/: main.cpp
test/: test.cpp
